# glfw_template_proj

./: .gitignore  CMakeLists.txt  Generate_Mac.sh  Generate_Win32.bat  game.cpp  game.h  glHeaders.h  loadShader.cpp  loadShader.h  main.cpp  rocketGLRenderer.h  rocketSystemInterface.cpp  rocketSystemInterface.h  thing.cpp  thing.h
shaders/: frag_basic.glsl  vert_basic.glsl
